--- a/makanku/pubspec.yaml
+++ b/makanku/pubspec.yaml
@@ -9,14 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Networking
   dio: ^5.3.0
+  http: ^1.1.0  # untuk mendukung API service lama dari lib.v4
+  # State management & local storage
   provider: ^6.0.5
   shared_preferences: ^2.2.2
-  google_fonts: ^6.3.0
   sqflite: ^2.4.2
+  # Fonts & theme
+  google_fonts: ^6.3.0
+  # Notifications & timezone
   flutter_timezone: ^4.1.1
   timezone: ^0.10.1
   flutter_local_notifications: ^19.4.0
+  # UI icons
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -28,3 +35,22 @@ flutter:
 
   assets:
     - assets/image/
+    - assets/fonts/
+
+  fonts:
+    - family: IBMPlexSansCondensed
+      fonts:
+        - asset: assets/fonts/IBMPlexSansCondensed-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/IBMPlexSansCondensed-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/IBMPlexSansCondensed-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/IBMPlexSansCondensed-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/IBMPlexSansCondensed-Light.ttf
+          weight: 300
+        - asset: assets/fonts/IBMPlexSansCondensed-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/IBMPlexSansCondensed-Thin.ttf
+          weight: 100
