--- a/makanku/pubspec.yaml
+++ b/makanku/pubspec.yaml
@@ -9,19 +9,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   # Networking
   dio: ^5.3.0
   http: ^1.1.0  # untuk mendukung API service lama dari lib.v4
+
   # State management & local storage
   provider: ^6.0.5
   shared_preferences: ^2.2.2
   sqflite: ^2.4.2
+  path: ^1.8.0
+
   # Fonts & theme
   google_fonts: ^6.3.0
+
   # Notifications & timezone
+  flutter_local_notifications: ^19.4.0
   flutter_timezone: ^4.1.1
   timezone: ^0.10.1
-  flutter_local_notifications: ^19.4.0
+
   # UI icons
   cupertino_icons: ^1.0.2
 
