--- a/makanku/pubspec.yaml
+++ b/makanku/pubspec.yaml
@@ -27,9 +27,11 @@ dependencies:
   flutter_local_notifications: ^19.4.0
   flutter_timezone: ^4.1.1
   timezone: ^0.10.1
+  permission_handler: ^11.0.0  # ✅ ditambahkan di sini
 
   # UI icons
   cupertino_icons: ^1.0.2
+  device_info_plus: ^12.1.0
 
 dev_dependencies:
   flutter_test:
